fixing 1200px game grid layout, to stop overflow of elements

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -398,7 +398,7 @@ body {
 }
 
 /* Phone screens */
-@media (min-width: 769px) {
+@media (min-width: 768px) {
   .game-info h1 {
     font-size: 2.2rem;
   }
@@ -426,7 +426,7 @@ body {
   }
 }
 
-/* iPad and laptop screens */
+/* ----iPad and laptop screens----- */
 @media (min-width: 992px) {
   .game-info h1 {
     font-size: 2.6rem;
@@ -455,7 +455,7 @@ body {
   }
 }
 
-/* Large laptop screens */
+/* ----Large laptop screens -------*/
 @media (min-width: 1200px) {
   .game-info h1 {
     font-size: 2.8rem;
@@ -466,8 +466,8 @@ body {
   }
 
   .tile {
-      width: 120px; /* Larger tile size */
-      height: 120px; /* Larger tile size */
+      width: 130px; /* Larger tile size */
+      height: 130px; /* Larger tile size */
   }
   .grid-container {
       grid-template-columns: repeat(5, 1fr); /* Adjusting for large screens */
@@ -475,6 +475,7 @@ body {
   }
   .game-container {
     padding: 30px; /* Increased padding for large laptops */
+    max-width: 980px; /* Constrained width for centering on larger screens */
   }
 
   #restart-btn {
